update on html and css

--- a/index.html
+++ b/index.html
@@ -9,30 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
-    <title>Contact - Mentor Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-    rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -143,7 +122,7 @@
             <h4 class="project-technologies">Ekobit Sapphire</h4>
           </div>
           <img src="images/2021_11_18_20_30_IMG_2695.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -151,7 +130,7 @@
             <h4 class="project-technologies">Web Designer</h4>
           </div>
           <img src="images/2021_11_18_20_36_IMG_2692.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -159,7 +138,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/2021_11_18_20_50_IMG_2694.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -167,7 +146,7 @@
             <h4 class="project-technologies">HTML / CSS / JS</h4>
           </div>
           <img src="images/2021_11_18_20_52_IMG_2691.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -175,7 +154,7 @@
             <h4 class="project-technologies">Web Developer</h4>
           </div>
           <img src="images/2021_11_18_21_18_IMG_2687.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -183,7 +162,7 @@
             <h4 class="project-technologies">Graphics</h4>
           </div>
           <img src="images/2021_11_18_22_42_IMG_2721.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -191,7 +170,7 @@
             <h4 class="project-technologies">Graphics Designer</h4>
           </div>
           <img src="images/2021_11_18_22_50_IMG_2710.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -199,7 +178,7 @@
             <h4 class="project-technologies">HTML / CSS / JS / Github</h4>
           </div>
           <img src="images/2021_11_18_22_51_IMG_2708.JPG" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
         <div class="project">
           <div class="project-text">
@@ -207,74 +186,15 @@
             <h4 class="project-technologies">Valentine's day</h4>
           </div>
           <img src="images/IMG-20220214-WA0040(1).jpg" class="project-img" />
-          <a href="ekobits.academy" class="project-link" target="_blank">Visit site</a>
+          <a href="https://www.ekobits.academy/" class="project-link" target="_blank">Visit site</a>
         </div>
       </div>
     </section>
     <!-- End of Section 3 -->
 
     <!-- Section 4 -->
-    <section id="contact" class="contact">
 
-      <div class="container" data-aos="fade-up">
-
-        <div class="row mt-5">
-
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
-              </div>
-
-            </div>
-
-          </div>
-
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
+    <!-- Contact Section -->
     <section class="section-4" id="section-4">
       <h1 class="section-heading section-4-heading">Contact Me</h1>
       <form class="contact-form center">
@@ -308,7 +228,7 @@
     </footer>
     <!-- End of Section 5 -->
   </div>
-  <script src="main.js"></script>
+
   <script src="script.js"></script>
 </body>
 
